[project]
name = "pseudocomfy"
description = "A package designed to enable multi-regional prompting for architectural rendering, integrated with the Rhino Pseudorandom plugin."
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["diffusers"]

[project.urls]
Repository = "https://github.com/Pseudotools/Pseudocomfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pseudotools"
DisplayName = "Pseudocomfy"
Icon = "https://raw.githubusercontent.com/Pseudotools/Pseudocomfy/29a21efdcf42d7918df8ce5b3dd6b9fe00da4dfa/pseudorandom_logo.png"
